@@ -73,12 +73,12 @@ REPOSITORY
     <https://github.com/tupinek/PYX>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    © 2005-2016 Michal Špaček
+    © 2005-2016 Michal Josef Špaček
 
     BSD 2-Clause License
 
